# flowlog-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  fly.toml  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker-build.yml
alembic/: env.py
alembic/versions/: 88bd3ea3e68f_base_app_models.py
app/: main.py
app/api/: utils.py
app/api/v1/: __init__.py  ai_jobs.py  journals.py  notes.py  projects.py  tags.py
app/core/: settings.py
app/db/: session.py
app/models/: __init__.py  ai.py  base.py  journal.py  note.py  project.py  tag.py
app/schemas/: __init__.py  ai.py  base.py  journal.py  note.py  project.py  response.py  tag.py
docs/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  FLY_COMMANDS.md  FLY_DEPLOYMENT.md  PRE_DEPLOY_CHECKLIST.md  TESTING.md
scripts/: fly-setup.sh
tests/: README.md  SETUP.md  __init__.py  conftest.py  test_ai_jobs.py  test_journals.py  test_main.py  test_notes.py  test_projects.py  test_tags.py
